# signalwire-rust

./: .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md
.cargo/: config.toml
docs/: agent_guide.md  api_reference.md  architecture.md  cli_guide.md  cloud_functions_guide.md  configuration.md  contexts_guide.md  datamap_guide.md  llm_parameters.md  mcp_gateway_reference.md  mcp_integration.md  sdk_features.md  security.md  skills_parameter_schema.md  skills_system.md  swaig_reference.md  swml_service_guide.md  third_party_skills.md  web_service.md
examples/: README.md  advanced_datamap_demo.rs  auto_vivified_example.rs  basic_swml_service.rs  call_flow_and_actions_demo.rs  comprehensive_dynamic_agent.rs  concierge_agent_example.rs  contexts_demo.rs  custom_path_agent.rs  data_map_demo.rs  datasphere_multi_instance_demo.rs  datasphere_serverless_demo.rs  datasphere_serverless_env_demo.rs  datasphere_webhook_env_demo.rs  declarative_agent.rs  dynamic_info_gatherer_example.rs  dynamic_swml_service.rs  faq_bot_agent.rs  gather_info_demo.rs  gather_per_question_functions_demo.rs  info_gatherer_example.rs  joke_agent.rs  joke_skill_demo.rs  kubernetes_ready_agent.rs  lambda_agent.rs  llm_params_demo.rs  local_search_agent.rs  mcp_agent.rs  mcp_gateway_demo.rs  multi_agent_server.rs  multi_endpoint_agent.rs  receptionist_agent_example.rs  record_call_example.rs  relay_answer_and_welcome.rs  room_and_sip_example.rs  session_and_state_demo.rs  simple_agent.rs  simple_dynamic_agent.rs  simple_dynamic_enhanced.rs  simple_static_agent.rs  (+12 more)
relay/: README.md
src/: lib.rs  (+1 more)
(+90 files in other folders)
